k8s/base/apps/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-nginx
  template:
    metadata:
      labels:
        app: app-nginx
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      containers:
      - name: app
        image: ghcr.io/joselrnz/portfolio-frontend:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
