k8s/base/apps/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nginx
  namespace: cloud
spec:
  selector:
    app: app-nginx
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
