k8s/base/apps/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: cloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "kube-system-security-headers@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
  - host: app.joselrnz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-nginx
            port:
              number: 80
  tls:
  - hosts:
    - app.joselrnz.com
    secretName: cloudflare-origin-cert
